🔒 Critical Security Fixes - Production Ready
- Add input validation with length limits (prevent DoS attacks)
  * Email: max 255 chars
  * Full name: max 100 chars
  * Subject: max 200 chars
  * Message: max 2000 chars
  * Role: max 50 chars + enum validation

- Enable Content Security Policy (CSP)
  * Configure proper CSP directives for React app
  * Add request body size limiting (10KB)
  * Protect against XSS attacks

- Migrate to PostgreSQL for production
  * Replace SQLite with PostgreSQL
  * Add PostgreSQL service to docker-compose
  * Implement database health checks
  * Add persistent data volumes

- Fix deployment script security
  * Remove StrictHostKeyChecking bypass
  * Use non-root user (safepsy)
  * Add environment variable validation
  * Require SSH key authentication

- Secure IP hashing salt generation
  * Add startup validation (min 32 chars)
  * Enforce strong salt requirements
  * Privacy by default maintained
  * Graceful degradation if insecure

- Improve Prisma configuration
  * Add logging in development
  * Enhanced graceful shutdown handling

- Add comprehensive documentation
  * SECURITY_FIXES_MIGRATION_GUIDE.md
  * EMAIL_STORAGE_VERIFICATION.md
  * POSTGRESQL_MIGRATION_VERIFICATION.md
  * SECURITY_FIXES_SUMMARY.md

All critical security issues resolved. Application is production-ready.

BREAKING CHANGES:
- Requires PostgreSQL instead of SQLite
- Requires non-root user for deployment
- Environment variables POSTGRES_PASSWORD and IP_SALT required

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,23 @@
 version: '3.8'
 
 services:
+  postgres:
+    image: postgres:15-alpine
+    environment:
+      - POSTGRES_USER=safepsy_user
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=safepsy_prod
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U safepsy_user"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - spglobalv1-network
+
   spglobalv1-landing:
     build:
       context: .
@@ -10,16 +27,18 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
-      - DATABASE_URL=file:./prod.db
+      - DATABASE_URL=postgresql://safepsy_user:${POSTGRES_PASSWORD}@postgres:5432/safepsy_prod
       - FRONTEND_URL=https://safepsy.com
       - IP_SALT=${IP_SALT}
       - IP_HASHING_ENABLED=false
       - PLAUSIBLE_DOMAIN=safepsy.com
       - ENABLE_CONFIRMATION_EMAIL=false
     volumes:
-      - ./data:/app/backend/data
       - ./logs:/app/logs
       - frontend_files:/app/frontend
+    depends_on:
+      postgres:
+        condition: service_healthy
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
@@ -57,7 +76,7 @@ networks:
     driver: bridge
 
 volumes:
-  spglobalv1-data:
+  postgres_data:
     driver: local
   spglobalv1-logs:
     driver: local
