--- a/env.example
+++ b/env.example
@@ -7,11 +7,11 @@ PORT=3001
 NODE_ENV=development
 
 # Database Configuration
-# SQLite file database (development)
-DATABASE_URL="file:./dev.db"
+# For production, use PostgreSQL (recommended):
+DATABASE_URL="postgresql://safepsy_user:YOUR_PASSWORD@localhost:5432/safepsy_dev"
 
-# For production, use a more robust database:
-# DATABASE_URL="postgresql://user:password@localhost:5432/safepsy"
+# For development with PostgreSQL:
+# DATABASE_URL="postgresql://safepsy_user:YOUR_PASSWORD@localhost:5432/safepsy_dev"
 
 # Frontend URL (for CORS configuration)
 FRONTEND_URL=http://localhost:3000
@@ -21,7 +21,9 @@ FRONTEND_URL=http://localhost:3000
 IP_HASHING_ENABLED=false
 
 # Generate a secure random salt for IP hashing
-# Use: openssl rand -hex 32
+# CRITICAL: Use a strong random salt (at least 32 characters)
+# Generate with: openssl rand -hex 32
+# Store in secure secret management system for production
 IP_SALT=your-secure-random-salt-change-this-in-production
 
 # Analytics (Optional)
@@ -32,12 +34,13 @@ PLAUSIBLE_DOMAIN=safepsy.com
 # Enable confirmation email pipeline (default: false)
 ENABLE_CONFIRMATION_EMAIL=false
 
-# Production Configuration (uncomment for production)
+# Production Configuration
+# POSTGRES_PASSWORD=YOUR_SECURE_POSTGRES_PASSWORD
 # NODE_ENV=production
-# DATABASE_URL="postgresql://user:password@localhost:5432/safepsy_prod"
+# DATABASE_URL="postgresql://safepsy_user:YOUR_SECURE_POSTGRES_PASSWORD@localhost:5432/safepsy_prod"
 # FRONTEND_URL=https://safepsy.com
 # PLAUSIBLE_DOMAIN=safepsy.com
-# IP_SALT=your-production-salt
+# IP_SALT=your-production-salt (generate with: openssl rand -hex 32)
 
 # Staging Configuration (uncomment for staging)
 # NODE_ENV=staging
